Light theme added

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
     <div class="wrapper">
       <header class="header container">
         <h1>Конвертор Валют</h1>
+        <div class="theme-switch">
+          <label class="switch-theme" for="checkbox">
+            <input type="checkbox" id="checkbox">
+            <div class="slider"></div>
+          </label>
+        </div>
       </header>
 
       <main class="main container">
@@ -112,8 +118,6 @@
         <button class="convert-btn">Конвертувати</button>
       </main>
       
-      <footer class="footer" style="visibility: hidden;">
-      </footer>
     </div>
 
     <script src="src/scripts/country-list.js"></script>
