--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </main>
     </div>
 
-    <script src="src/scripts/country-list.js"></script>
-    <script src="src/scripts/main.js"></script>
+    <script type="module" src="./src/scripts/country-list.js"></script>
+    <script type="module" src="./src/scripts/main.js"></script>
   </body>
 </html>
